<resources>
    <string name="app_name">tranki</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="google_api_header">Google Cloud Api Settings</string>
    <string name="anki_api_header">AnkiConnect Api Settings</string>

    <!-- Messages Preferences -->
    <string name="google_api_title">API Json File Contents</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="setup_instructions">
        "Welcome to tranki! This is a no-frills, open source app."
        "It was programmed for my use; mass appeal was not my goal."
        "It's unpolished, potentially buggy, and not so simple to set up."
        "It'll help if you have some programming experience.\n\n"
        "WHAT THIS APP IS FOR\n"
        "When you're learning a new language blah blah blah\n\n"
        "SETUP INSTRUCTIONS\n"
        "1. Create a Google Cloud account if you haven't already. "
            "Sign into Google Cloud, and then click \"console\" in the top right.\n"
        "2. Create a new project, naming it whatever you want. "
            "Select this project, using the dropdown in the upper left, "
            "such that it tells you that you're working in that project.\n"


    </string>
    <string name="app_title">tranki</string>
    <string name="anki_url_title">AnkiConnect URL</string>
    <string name="anki_key_switch_title">Use API Key</string>
    <string name="anki_api_key">Api Key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="source_language">Source Language</string>
    <string name="remove_tab">RmTb</string>
    <string name="save">Save</string>

</resources>